<?xml version="1.0"?>
<package>
    <name>nlosexclusion</name>
    <version>1.3.1</version>
    <description>GNSS NLOS (Non-Line-of-Sight) exclusion module</description>

    <maintainer email="xiangru.wang@polyu.edu.hk">Xiangru Wang</maintainer>
    <author email="welson.wen@polyu.edu.hk">Welson Wen</author>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_filters</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>tf2_sensor_msgs</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelets.xml"/>
    </export>
</package>
